--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,7 @@
 databases:
-  - name: emma-s
-    databaseName: emma_s
-    user: emma_s_user
+  - name: backed
+    databaseName: backed
+    user: backed_user
 
 services:
   - type: web
@@ -12,7 +12,7 @@ services:
     envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: emma_s
+          name: backed
           property: connectionString
       - key: RAILS_MASTER_KEY
         sync: false
