--- a/config/database.yml
+++ b/config/database.yml
@@ -20,9 +20,6 @@ default: &default
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  host: localhost
-  username:  postgres
-  password: gman1
 
 development:
   <<: *default
@@ -44,7 +41,7 @@ development:
 
   # The TCP port the server listens on. Defaults to 5432.
   # If your server runs on a different port number, change accordingly.
-   #port: 5432
+  #port: 5432
 
   # Schema search path. The server defaults to $user,public
   #schema_search_path: myapp,sharedapp,public
@@ -85,5 +82,5 @@ test:
 production:
   <<: *default
   database: Backend_api_production
-  username:  postgres
-  password: gman1
+  username: Backend_api
+  password: <%= ENV["BACKEND_API_DATABASE_PASSWORD"] %>
